Compiled a workflow using ffv1 v.3 and it works fine with AVI, MKV, and NUT wrappers playing back in VLC. In an MOV wrapper, VLC does not display video, only audio.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
demux: mp4: add support for FFV1 v2 (fix [#13131](https://code.videolan.org/videolan/vlc/-/issues/13131))V2 has global tables, and then needs it to be passed asextradata IV.