demux: mp4: add support for FFV1 v2 (fix #13131)

V2 has global tables, and then needs it to be passed as
extradata IV.